fixing z-index in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,7 @@ h2 {
   left: 40px;
   right: 40px;
   border-radius: 60px 60px 60px 60px;
+  z-index: 2222; 
 }
 .navbar--items > ul {
   list-style: none;
